[gd_scene load_steps=45 format=4 uid="uid://6on1xyqq660l"]

[ext_resource type="Texture2D" uid="uid://dc8ufrqcpjsxy" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Level_One_1.png" id="1_edpga"]
[ext_resource type="Script" path="res://Scenes/MainSceneTrash.gd" id="1_xjxiu"]
[ext_resource type="Texture2D" uid="uid://b77we747iskbr" path="res://Assets/AssetsLittleRunmo/12_Map/Back_3.png" id="3_hfd1d"]
[ext_resource type="Texture2D" uid="uid://btwcg8mbs2l0o" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Level_One_5.png" id="3_mpylc"]
[ext_resource type="Shader" path="res://Script/scroll.gdshader" id="4_e2gib"]
[ext_resource type="Texture2D" uid="uid://damddmks7p0ba" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Level_One_4.png" id="4_rxpip"]
[ext_resource type="Texture2D" uid="uid://b1m8x1ckw4efa" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Level_One_2.png" id="6_ostr8"]
[ext_resource type="Texture2D" uid="uid://vypaynrylfm" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Small_Tree_1.png" id="7_6ipls"]
[ext_resource type="Shader" path="res://Script/CloudScroll.gdshader" id="7_u4kkr"]
[ext_resource type="TileSet" uid="uid://dfu7axp0buhqx" path="res://Assets/AssetsLittleRunmo/GroundTiles.tres" id="8_mwq4u"]
[ext_resource type="Texture2D" uid="uid://c7kewrbh8fhp2" path="res://Assets/AssetsLittleRunmo/12_Map/Back_5.png" id="8_qnt8l"]
[ext_resource type="Texture2D" uid="uid://2t67p1xcri87" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Tree_1.png" id="10_wo88l"]
[ext_resource type="Texture2D" uid="uid://dnacwj80ned" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Small_Tree_2.png" id="11_3de3p"]
[ext_resource type="Texture2D" uid="uid://cu0vlbsaqoh6i" path="res://Assets/AssetsLittleRunmo/6_Backgrounds/Tree_2.png" id="12_lvjgq"]
[ext_resource type="Texture2D" uid="uid://nj0u14e66jyi" path="res://Assets/ManualAsset/TrashBin/green_closed.png" id="14_cjv16"]
[ext_resource type="Script" path="res://Script/trash_bin_group.gd" id="14_w1oql"]
[ext_resource type="Texture2D" uid="uid://c4d4jq4nxeend" path="res://Assets/ManualAsset/TrashBin/green_opened.png" id="15_meuxd"]
[ext_resource type="Texture2D" uid="uid://dc2qo4xy8fy6g" path="res://Assets/ManualAsset/TrashBin/Rope.png" id="16_el8dd"]
[ext_resource type="Texture2D" uid="uid://cqr6xj0rpvkqm" path="res://Assets/ManualAsset/TrashBin/yellow_closed.png" id="16_rrtpl"]
[ext_resource type="Script" path="res://Scenes/TrashBin/TrashBin.gd" id="16_vlwld"]
[ext_resource type="Texture2D" uid="uid://cbdnn4llpesmw" path="res://Assets/ManualAsset/TrashBin/yellow_opened.png" id="17_2vnb8"]
[ext_resource type="Texture2D" uid="uid://bqu62wb33d877" path="res://Assets/ManualAsset/TrashBin/red_closed.png" id="18_wb4bs"]
[ext_resource type="Texture2D" uid="uid://cv3fn86lgig4d" path="res://Assets/ManualAsset/TrashBin/red_opened.png" id="19_pksyd"]
[ext_resource type="FontFile" uid="uid://c6iy4fydtc4b0" path="res://Assets/ManualAsset/Fonts/easvhs.ttf" id="24_f6qqn"]
[ext_resource type="Shader" path="res://Scenes/HeartBeat.gdshader" id="25_g73im"]
[ext_resource type="Texture2D" uid="uid://bnylsltjvu4yq" path="res://Assets/ManualAsset/Heart.png" id="25_sa8td"]
[ext_resource type="Texture2D" uid="uid://dayb1bn58dqy4" path="res://Assets/ManualAsset/UI_Flat_FrameSlot03a.png" id="27_7y4js"]
[ext_resource type="AudioStream" uid="uid://dcotgtan05jxd" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Music/Little Runmo Level One.mp3" id="27_jfa7l"]
[ext_resource type="Script" path="res://Scenes/pause_play.gd" id="28_cx538"]
[ext_resource type="Script" path="res://Scenes/retry.gd" id="29_3tbbb"]
[ext_resource type="AudioStream" uid="uid://cbilc72herfro" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Button_Press_Sound.wav" id="31_16a6c"]
[ext_resource type="AudioStream" uid="uid://i3an7nek0mrr" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Big_Step.wav" id="32_oib6q"]
[ext_resource type="AudioStream" uid="uid://bupo7aim7sowr" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Step.wav" id="33_b44sk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6os7s"]
shader = ExtResource("7_u4kkr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yh2k6"]
shader = ExtResource("7_u4kkr")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7wl36"]
shader = ExtResource("4_e2gib")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfnsr"]
size = Vector2(726, 230.559)

[sub_resource type="SpriteFrames" id="SpriteFrames_l6dhp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_cjv16")
}, {
"duration": 1.0,
"texture": ExtResource("15_meuxd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xtxa"]
size = Vector2(26.355, 16.3538)

[sub_resource type="SpriteFrames" id="SpriteFrames_grltm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_rrtpl")
}, {
"duration": 1.0,
"texture": ExtResource("17_2vnb8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6lkd"]
size = Vector2(12.865, 73.9131)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmig3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_wb4bs")
}, {
"duration": 1.0,
"texture": ExtResource("19_pksyd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kepxm"]
size = Vector2(12.0524, 77.6397)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lb75x"]
shader = ExtResource("25_g73im")
shader_parameter/pulse_speed = 1.0
shader_parameter/scale_amount = 0.2

[node name="Main" type="Node2D"]
position = Vector2(352, 645)
script = ExtResource("1_xjxiu")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, 2)
scale = Vector2(1.02222, 2.2)
texture = ExtResource("1_edpga")
metadata/_edit_lock_ = true

[node name="Mountain2" type="Sprite2D" parent="Background"]
position = Vector2(74.3478, 13.6364)
scale = Vector2(0.978261, 0.454545)
texture = ExtResource("3_hfd1d")
metadata/_edit_lock_ = true

[node name="Back6" type="Sprite2D" parent="Background/Mountain2"]
position = Vector2(-303, 2.99994)
texture = ExtResource("3_hfd1d")
metadata/_edit_lock_ = true

[node name="Back3" type="Sprite2D" parent="Background/Mountain2"]
position = Vector2(226.001, -6.10352e-05)
scale = Vector2(0.454689, 1)
texture = ExtResource("3_hfd1d")
metadata/_edit_lock_ = true

[node name="Mountain1" type="Sprite2D" parent="Background"]
position = Vector2(-0.000328064, 10.7528)
scale = Vector2(1.05978, 0.798834)
texture = ExtResource("3_mpylc")
metadata/_edit_lock_ = true

[node name="Cloud1" type="Sprite2D" parent="Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_6os7s")
position = Vector2(-3.42393, -130)
scale = Vector2(1.04756, 0.454545)
texture = ExtResource("6_ostr8")
metadata/_edit_lock_ = true

[node name="Cloud2" type="Sprite2D" parent="Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_yh2k6")
position = Vector2(-9.78261, -210.909)
scale = Vector2(1.13179, 0.510972)
texture = ExtResource("6_ostr8")
metadata/_edit_lock_ = true

[node name="Mountain3" type="Sprite2D" parent="Background"]
z_index = 1
position = Vector2(1.95657, 13.1818)
scale = Vector2(2.26529, 3.48295)
texture = ExtResource("8_qnt8l")
metadata/_edit_lock_ = true

[node name="Trees" type="Node2D" parent="Background"]
metadata/_edit_lock_ = true

[node name="SmallTree2" type="Sprite2D" parent="Background/Trees"]
position = Vector2(150.652, 62.7273)
scale = Vector2(1.39441, 0.529442)
texture = ExtResource("11_3de3p")
metadata/_edit_lock_ = true

[node name="SmallTree1" type="Sprite2D" parent="Background/Trees"]
position = Vector2(275.87, 57.5909)
scale = Vector2(1.71196, 0.642045)
texture = ExtResource("7_6ipls")
metadata/_edit_lock_ = true

[node name="Tree2" type="Sprite2D" parent="Background/Trees"]
position = Vector2(-53.8045, 32.5)
scale = Vector2(1.0929, 0.602678)
texture = ExtResource("12_lvjgq")
metadata/_edit_lock_ = true

[node name="Tree1" type="Sprite2D" parent="Background/Trees"]
position = Vector2(-257.283, 15)
scale = Vector2(2.18275, 0.879371)
texture = ExtResource("10_wo88l")
metadata/_edit_lock_ = true

[node name="WaterArea" type="Area2D" parent="."]
z_index = 10
position = Vector2(6, 474.001)
scale = Vector2(0.999998, 0.555172)

[node name="Water" type="Sprite2D" parent="WaterArea"]
z_index = 2
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_7wl36")
position = Vector2(-4.5004, 0)
scale = Vector2(1.0125, 1)
texture = ExtResource("4_rxpip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
light_mask = 512
visibility_layer = 512
z_index = 3
position = Vector2(7, 181.926)
shape = SubResource("RectangleShape2D_nfnsr")
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource("8_mwq4u")
format = 2
layer_0/tile_data = PackedInt32Array(1900521, 0, 0, 1966057, 0, 1, 2031593, 0, 1, 2097129, 0, 1, 2162665, 0, 1, 2228201, 0, 1, 2293737, 0, 1, 2359273, 0, 1, 2424809, 0, 1, 2490345, 0, 1, 2555881, 0, 1, 2621417, 0, 1)
metadata/_edit_lock_ = true

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADq/xwAAAABAAAAAADr/xwAAAABAAAAAADs/xwAAAABAAAAAADt/xwAAAABAAAAAADu/xwAAAABAAAAAADv/xwAAAABAAAAAADw/xwAAAABAAAAAADx/xwAAAABAAAAAADy/xwAAAABAAAAAADz/xwAAAABAAAAAAD0/xwAAAABAAAAAAD1/xwAAAABAAAAAAD2/xwAAAABAAAAAAD3/xwAAAABAAAAAAD4/xwAAAABAAAAAAD5/xwAAAABAAAAAAD6/xwAAAABAAAAAAD7/xwAAAABAAAAAAD8/xwAAAABAAAAAAD9/xwAAAABAAAAAAD+/xwAAAABAAAAAAD//xwAAAABAAAAAAAAABwAAAABAAAAAAABABwAAAABAAAAAAACABwAAAABAAAAAAADABwAAAABAAAAAAAEABwAAAABAAAAAAAFABwAAAABAAAAAAAGABwAAAABAAAAAAAHABwAAAABAAAAAAAIABwAAAABAAAAAAAJABwAAAABAAAAAAAKABwAAAABAAAAAAALABwAAAABAAAAAAAMABwAAAABAAAAAAANABwAAAABAAAAAAAOABwAAAABAAAAAAAPABwAAAABAAAAAAAQABwAAAABAAAAAAARABwAAAABAAAAAAASABwAAAABAAAAAAATABwAAAABAAAAAAAUABwAAAABAAAAAAAVABwAAAABAAAAAAAWABwAAAABAAAAAADq/x0AAAABAAEAAADq/x4AAAABAAEAAADq/x8AAAABAAEAAADq/yAAAAABAAEAAADq/yEAAAABAAEAAADq/yIAAAABAAEAAADq/yMAAAABAAEAAADr/x0AAAABAAEAAADr/x4AAAABAAEAAADr/x8AAAABAAEAAADr/yAAAAABAAEAAADr/yEAAAABAAEAAADr/yIAAAABAAEAAADr/yMAAAABAAEAAADs/x0AAAABAAEAAADs/x4AAAABAAEAAADs/x8AAAABAAEAAADs/yAAAAABAAEAAADs/yEAAAABAAEAAADs/yIAAAABAAEAAADs/yMAAAABAAEAAADt/x0AAAABAAEAAADt/x4AAAABAAEAAADt/x8AAAABAAEAAADt/yAAAAABAAEAAADt/yEAAAABAAEAAADt/yIAAAABAAEAAADt/yMAAAABAAEAAADu/x0AAAABAAEAAADu/x4AAAABAAEAAADu/x8AAAABAAEAAADu/yAAAAABAAEAAADu/yEAAAABAAEAAADu/yIAAAABAAEAAADu/yMAAAABAAEAAADv/x0AAAABAAEAAADv/x4AAAABAAEAAADv/x8AAAABAAEAAADv/yAAAAABAAEAAADv/yEAAAABAAEAAADv/yIAAAABAAEAAADv/yMAAAABAAEAAADw/x0AAAABAAEAAADw/x4AAAABAAEAAADw/x8AAAABAAEAAADw/yAAAAABAAEAAADw/yEAAAABAAEAAADw/yIAAAABAAEAAADw/yMAAAABAAEAAADx/x0AAAABAAEAAADx/x4AAAABAAEAAADx/x8AAAABAAEAAADx/yAAAAABAAEAAADx/yEAAAABAAEAAADx/yIAAAABAAEAAADx/yMAAAABAAEAAADy/x0AAAABAAEAAADy/x4AAAABAAEAAADy/x8AAAABAAEAAADy/yAAAAABAAEAAADy/yEAAAABAAEAAADy/yIAAAABAAEAAADy/yMAAAABAAEAAADz/x0AAAABAAEAAADz/x4AAAABAAEAAADz/x8AAAABAAEAAADz/yAAAAABAAEAAADz/yEAAAABAAEAAADz/yIAAAABAAEAAADz/yMAAAABAAEAAAD0/x0AAAABAAEAAAD0/x4AAAABAAEAAAD0/x8AAAABAAEAAAD0/yAAAAABAAEAAAD0/yEAAAABAAEAAAD0/yIAAAABAAEAAAD0/yMAAAABAAEAAAD1/x0AAAABAAEAAAD1/x4AAAABAAEAAAD1/x8AAAABAAEAAAD1/yAAAAABAAEAAAD1/yEAAAABAAEAAAD1/yIAAAABAAEAAAD1/yMAAAABAAEAAAD2/x0AAAABAAEAAAD2/x4AAAABAAEAAAD2/x8AAAABAAEAAAD2/yAAAAABAAEAAAD2/yEAAAABAAEAAAD2/yIAAAABAAEAAAD2/yMAAAABAAEAAAD3/x0AAAABAAEAAAD3/x4AAAABAAEAAAD3/x8AAAABAAEAAAD3/yAAAAABAAEAAAD3/yEAAAABAAEAAAD3/yIAAAABAAEAAAD3/yMAAAABAAEAAAD4/x0AAAABAAEAAAD4/x4AAAABAAEAAAD4/x8AAAABAAEAAAD4/yAAAAABAAEAAAD4/yEAAAABAAEAAAD4/yIAAAABAAEAAAD4/yMAAAABAAEAAAD5/x0AAAABAAEAAAD5/x4AAAABAAEAAAD5/x8AAAABAAEAAAD5/yAAAAABAAEAAAD5/yEAAAABAAEAAAD5/yIAAAABAAEAAAD5/yMAAAABAAEAAAD6/x0AAAABAAEAAAD6/x4AAAABAAEAAAD6/x8AAAABAAEAAAD6/yAAAAABAAEAAAD6/yEAAAABAAEAAAD6/yIAAAABAAEAAAD6/yMAAAABAAEAAAD7/x0AAAABAAEAAAD7/x4AAAABAAEAAAD7/x8AAAABAAEAAAD7/yAAAAABAAEAAAD7/yEAAAABAAEAAAD7/yIAAAABAAEAAAD7/yMAAAABAAEAAAD8/x0AAAABAAEAAAD8/x4AAAABAAEAAAD8/x8AAAABAAEAAAD8/yAAAAABAAEAAAD8/yEAAAABAAEAAAD8/yIAAAABAAEAAAD8/yMAAAABAAEAAAD9/x0AAAABAAEAAAD9/x4AAAABAAEAAAD9/x8AAAABAAEAAAD9/yAAAAABAAEAAAD9/yEAAAABAAEAAAD9/yIAAAABAAEAAAD9/yMAAAABAAEAAAD+/x0AAAABAAEAAAD+/x4AAAABAAEAAAD+/x8AAAABAAEAAAD+/yAAAAABAAEAAAD+/yEAAAABAAEAAAD+/yIAAAABAAEAAAD+/yMAAAABAAEAAAD//x0AAAABAAEAAAD//x4AAAABAAEAAAD//x8AAAABAAEAAAD//yAAAAABAAEAAAD//yEAAAABAAEAAAD//yIAAAABAAEAAAD//yMAAAABAAEAAAAAAB0AAAABAAEAAAAAAB4AAAABAAEAAAAAAB8AAAABAAEAAAAAACAAAAABAAEAAAAAACEAAAABAAEAAAAAACIAAAABAAEAAAAAACMAAAABAAEAAAABAB0AAAABAAEAAAABAB4AAAABAAEAAAABAB8AAAABAAEAAAABACAAAAABAAEAAAABACEAAAABAAEAAAABACIAAAABAAEAAAABACMAAAABAAEAAAACAB0AAAABAAEAAAACAB4AAAABAAEAAAACAB8AAAABAAEAAAACACAAAAABAAEAAAACACEAAAABAAEAAAACACIAAAABAAEAAAACACMAAAABAAEAAAADAB0AAAABAAEAAAADAB4AAAABAAEAAAADAB8AAAABAAEAAAADACAAAAABAAEAAAADACEAAAABAAEAAAADACIAAAABAAEAAAADACMAAAABAAEAAAAEAB0AAAABAAEAAAAEAB4AAAABAAEAAAAEAB8AAAABAAEAAAAEACAAAAABAAEAAAAEACEAAAABAAEAAAAEACIAAAABAAEAAAAEACMAAAABAAEAAAAFAB0AAAABAAEAAAAFAB4AAAABAAEAAAAFAB8AAAABAAEAAAAFACAAAAABAAEAAAAFACEAAAABAAEAAAAFACIAAAABAAEAAAAFACMAAAABAAEAAAAGAB0AAAABAAEAAAAGAB4AAAABAAEAAAAGAB8AAAABAAEAAAAGACAAAAABAAEAAAAGACEAAAABAAEAAAAGACIAAAABAAEAAAAGACMAAAABAAEAAAAHAB0AAAABAAEAAAAHAB4AAAABAAEAAAAHAB8AAAABAAEAAAAHACAAAAABAAEAAAAHACEAAAABAAEAAAAHACIAAAABAAEAAAAHACMAAAABAAEAAAAIAB0AAAABAAEAAAAIAB4AAAABAAEAAAAIAB8AAAABAAEAAAAIACAAAAABAAEAAAAIACEAAAABAAEAAAAIACIAAAABAAEAAAAIACMAAAABAAEAAAAJAB0AAAABAAEAAAAJAB4AAAABAAEAAAAJAB8AAAABAAEAAAAJACAAAAABAAEAAAAJACEAAAABAAEAAAAJACIAAAABAAEAAAAJACMAAAABAAEAAAAKAB0AAAABAAEAAAAKAB4AAAABAAEAAAAKAB8AAAABAAEAAAAKACAAAAABAAEAAAAKACEAAAABAAEAAAAKACIAAAABAAEAAAAKACMAAAABAAEAAAALAB0AAAABAAEAAAALAB4AAAABAAEAAAALAB8AAAABAAEAAAALACAAAAABAAEAAAALACEAAAABAAEAAAALACIAAAABAAEAAAALACMAAAABAAEAAAAMAB0AAAABAAEAAAAMAB4AAAABAAEAAAAMAB8AAAABAAEAAAAMACAAAAABAAEAAAAMACEAAAABAAEAAAAMACIAAAABAAEAAAAMACMAAAABAAEAAAANAB0AAAABAAEAAAANAB4AAAABAAEAAAANAB8AAAABAAEAAAANACAAAAABAAEAAAANACEAAAABAAEAAAANACIAAAABAAEAAAANACMAAAABAAEAAAAOAB0AAAABAAEAAAAOAB4AAAABAAEAAAAOAB8AAAABAAEAAAAOACAAAAABAAEAAAAOACEAAAABAAEAAAAOACIAAAABAAEAAAAOACMAAAABAAEAAAAPAB0AAAABAAEAAAAPAB4AAAABAAEAAAAPAB8AAAABAAEAAAAPACAAAAABAAEAAAAPACEAAAABAAEAAAAPACIAAAABAAEAAAAPACMAAAABAAEAAAAQAB0AAAABAAEAAAAQAB4AAAABAAEAAAAQAB8AAAABAAEAAAAQACAAAAABAAEAAAAQACEAAAABAAEAAAAQACIAAAABAAEAAAAQACMAAAABAAEAAAARAB0AAAABAAEAAAARAB4AAAABAAEAAAARAB8AAAABAAEAAAARACAAAAABAAEAAAARACEAAAABAAEAAAARACIAAAABAAEAAAARACMAAAABAAEAAAASAB0AAAABAAEAAAASAB4AAAABAAEAAAASAB8AAAABAAEAAAASACAAAAABAAEAAAASACEAAAABAAEAAAASACIAAAABAAEAAAASACMAAAABAAEAAAATAB0AAAABAAEAAAATAB4AAAABAAEAAAATAB8AAAABAAEAAAATACAAAAABAAEAAAATACEAAAABAAEAAAATACIAAAABAAEAAAATACMAAAABAAEAAAAUAB0AAAABAAEAAAAUAB4AAAABAAEAAAAUAB8AAAABAAEAAAAUACAAAAABAAEAAAAUACEAAAABAAEAAAAUACIAAAABAAEAAAAUACMAAAABAAEAAAAVAB0AAAABAAEAAAAVAB4AAAABAAEAAAAVAB8AAAABAAEAAAAVACAAAAABAAEAAAAVACEAAAABAAEAAAAVACIAAAABAAEAAAAVACMAAAABAAEAAAAWAB0AAAABAAEAAAAWAB4AAAABAAEAAAAWAB8AAAABAAEAAAAWACAAAAABAAEAAAAWACEAAAABAAEAAAAWACIAAAABAAEAAAAWACMAAAABAAEAAADq/yQAAAABAAEAAADq/yUAAAABAAEAAADq/yYAAAABAAEAAADq/ycAAAABAAEAAADr/yQAAAABAAEAAADr/yUAAAABAAEAAADr/yYAAAABAAEAAADr/ycAAAABAAEAAADs/yQAAAABAAEAAADs/yUAAAABAAEAAADs/yYAAAABAAEAAADs/ycAAAABAAEAAADt/yQAAAABAAEAAADt/yUAAAABAAEAAADt/yYAAAABAAEAAADt/ycAAAABAAEAAADu/yQAAAABAAEAAADu/yUAAAABAAEAAADu/yYAAAABAAEAAADu/ycAAAABAAEAAADv/yQAAAABAAEAAADv/yUAAAABAAEAAADv/yYAAAABAAEAAADv/ycAAAABAAEAAADw/yQAAAABAAEAAADw/yUAAAABAAEAAADw/yYAAAABAAEAAADw/ycAAAABAAEAAADx/yQAAAABAAEAAADx/yUAAAABAAEAAADx/yYAAAABAAEAAADx/ycAAAABAAEAAADy/yQAAAABAAEAAADy/yUAAAABAAEAAADy/yYAAAABAAEAAADy/ycAAAABAAEAAADz/yQAAAABAAEAAADz/yUAAAABAAEAAADz/yYAAAABAAEAAADz/ycAAAABAAEAAAD0/yQAAAABAAEAAAD0/yUAAAABAAEAAAD0/yYAAAABAAEAAAD0/ycAAAABAAEAAAD1/yQAAAABAAEAAAD1/yUAAAABAAEAAAD1/yYAAAABAAEAAAD1/ycAAAABAAEAAAD2/yQAAAABAAEAAAD2/yUAAAABAAEAAAD2/yYAAAABAAEAAAD2/ycAAAABAAEAAAD3/yQAAAABAAEAAAD3/yUAAAABAAEAAAD3/yYAAAABAAEAAAD3/ycAAAABAAEAAAD4/yQAAAABAAEAAAD4/yUAAAABAAEAAAD4/yYAAAABAAEAAAD4/ycAAAABAAEAAAD5/yQAAAABAAEAAAD5/yUAAAABAAEAAAD5/yYAAAABAAEAAAD5/ycAAAABAAEAAAD6/yQAAAABAAEAAAD6/yUAAAABAAEAAAD6/yYAAAABAAEAAAD6/ycAAAABAAEAAAD7/yQAAAABAAEAAAD7/yUAAAABAAEAAAD7/yYAAAABAAEAAAD7/ycAAAABAAEAAAD8/yQAAAABAAEAAAD8/yUAAAABAAEAAAD8/yYAAAABAAEAAAD8/ycAAAABAAEAAAD9/yQAAAABAAEAAAD9/yUAAAABAAEAAAD9/yYAAAABAAEAAAD9/ycAAAABAAEAAAD+/yQAAAABAAEAAAD+/yUAAAABAAEAAAD+/yYAAAABAAEAAAD+/ycAAAABAAEAAAD//yQAAAABAAEAAAD//yUAAAABAAEAAAD//yYAAAABAAEAAAD//ycAAAABAAEAAAAAACQAAAABAAEAAAAAACUAAAABAAEAAAAAACYAAAABAAEAAAAAACcAAAABAAEAAAABACQAAAABAAEAAAABACUAAAABAAEAAAABACYAAAABAAEAAAABACcAAAABAAEAAAACACQAAAABAAEAAAACACUAAAABAAEAAAACACYAAAABAAEAAAACACcAAAABAAEAAAADACQAAAABAAEAAAADACUAAAABAAEAAAADACYAAAABAAEAAAADACcAAAABAAEAAAAEACQAAAABAAEAAAAEACUAAAABAAEAAAAEACYAAAABAAEAAAAEACcAAAABAAEAAAAFACQAAAABAAEAAAAFACUAAAABAAEAAAAFACYAAAABAAEAAAAFACcAAAABAAEAAAAGACQAAAABAAEAAAAGACUAAAABAAEAAAAGACYAAAABAAEAAAAGACcAAAABAAEAAAAHACQAAAABAAEAAAAHACUAAAABAAEAAAAHACYAAAABAAEAAAAHACcAAAABAAEAAAAIACQAAAABAAEAAAAIACUAAAABAAEAAAAIACYAAAABAAEAAAAIACcAAAABAAEAAAAJACQAAAABAAEAAAAJACUAAAABAAEAAAAJACYAAAABAAEAAAAJACcAAAABAAEAAAAKACQAAAABAAEAAAAKACUAAAABAAEAAAAKACYAAAABAAEAAAAKACcAAAABAAEAAAALACQAAAABAAEAAAALACUAAAABAAEAAAALACYAAAABAAEAAAALACcAAAABAAEAAAAMACQAAAABAAEAAAAMACUAAAABAAEAAAAMACYAAAABAAEAAAAMACcAAAABAAEAAAANACQAAAABAAEAAAANACUAAAABAAEAAAANACYAAAABAAEAAAANACcAAAABAAEAAAAOACQAAAABAAEAAAAOACUAAAABAAEAAAAOACYAAAABAAEAAAAOACcAAAABAAEAAAAPACQAAAABAAEAAAAPACUAAAABAAEAAAAPACYAAAABAAEAAAAPACcAAAABAAEAAAAQACQAAAABAAEAAAAQACUAAAABAAEAAAAQACYAAAABAAEAAAAQACcAAAABAAEAAAARACQAAAABAAEAAAARACUAAAABAAEAAAARACYAAAABAAEAAAARACcAAAABAAEAAAASACQAAAABAAEAAAASACUAAAABAAEAAAASACYAAAABAAEAAAASACcAAAABAAEAAAATACQAAAABAAEAAAATACUAAAABAAEAAAATACYAAAABAAEAAAATACcAAAABAAEAAAAUACQAAAABAAEAAAAUACUAAAABAAEAAAAUACYAAAABAAEAAAAUACcAAAABAAEAAAAVACQAAAABAAEAAAAVACUAAAABAAEAAAAVACYAAAABAAEAAAAVACcAAAABAAEAAAAWACQAAAABAAEAAAAWACUAAAABAAEAAAAWACYAAAABAAEAAAAWACcAAAABAAEAAAA=")
tile_set = ExtResource("8_mwq4u")
metadata/_edit_lock_ = true

[node name="TrashBinGroup" type="Node2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(0.05, 0.05)
script = ExtResource("14_w1oql")

[node name="OrganicBin" type="Area2D" parent="TrashBinGroup"]
script = ExtResource("16_vlwld")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TrashBinGroup/OrganicBin"]
z_index = 4
position = Vector2(-4540, 7300)
sprite_frames = SubResource("SpriteFrames_l6dhp")
speed_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashBinGroup/OrganicBin"]
position = Vector2(-4510, 7480)
scale = Vector2(67.5395, -144.309)
shape = SubResource("RectangleShape2D_5xtxa")

[node name="AnorganicBin" type="Area2D" parent="TrashBinGroup"]
script = ExtResource("16_vlwld")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TrashBinGroup/AnorganicBin"]
z_index = 4
position = Vector2(-200, 7300)
sprite_frames = SubResource("SpriteFrames_grltm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashBinGroup/AnorganicBin"]
position = Vector2(-190, 7410)
scale = Vector2(147.688, 32.2)
shape = SubResource("RectangleShape2D_n6lkd")

[node name="ToxicBin" type="Area2D" parent="TrashBinGroup"]
script = ExtResource("16_vlwld")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TrashBinGroup/ToxicBin"]
z_index = 4
position = Vector2(4100, 7300)
sprite_frames = SubResource("SpriteFrames_vmig3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrashBinGroup/ToxicBin"]
position = Vector2(4130, 7490)
scale = Vector2(147.688, 32.2)
shape = SubResource("RectangleShape2D_kepxm")

[node name="Rope" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(13.4999, 381)
scale = Vector2(2.05385, 0.945455)
texture = ExtResource("16_el8dd")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ScoreLabel" type="Label" parent="."]
z_index = 10
offset_left = 135.0
offset_top = -656.0
offset_right = 340.0
offset_bottom = -550.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("24_f6qqn")
theme_override_font_sizes/font_size = 50
text = "Score : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lives" type="Node2D" parent="."]
z_index = 10
material = SubResource("ShaderMaterial_lb75x")
scale = Vector2(0.2, 0.2)

[node name="Lives1" type="Sprite2D" parent="Lives"]
use_parent_material = true
position = Vector2(-1590, -3000)
texture = ExtResource("25_sa8td")
metadata/_edit_lock_ = true

[node name="Lives2" type="Sprite2D" parent="Lives"]
use_parent_material = true
position = Vector2(-1285, -3000)
texture = ExtResource("25_sa8td")
metadata/_edit_lock_ = true

[node name="Lives3" type="Sprite2D" parent="Lives"]
use_parent_material = true
position = Vector2(-970, -3000)
texture = ExtResource("25_sa8td")
metadata/_edit_lock_ = true

[node name="Lives4" type="Sprite2D" parent="Lives"]
use_parent_material = true
position = Vector2(-660, -3000)
texture = ExtResource("25_sa8td")
metadata/_edit_lock_ = true

[node name="Lives5" type="Sprite2D" parent="Lives"]
use_parent_material = true
position = Vector2(-325, -3000)
texture = ExtResource("25_sa8td")
metadata/_edit_lock_ = true

[node name="Pause_Play" type="Button" parent="."]
z_index = 16
offset_left = 278.0
offset_top = -164.0
offset_right = 360.0
offset_bottom = -80.0
focus_mode = 0
theme_type_variation = &"FlatButton"
toggle_mode = true
icon = ExtResource("27_7y4js")
icon_alignment = 1
expand_icon = true
script = ExtResource("28_cx538")

[node name="Retry" type="Button" parent="."]
visible = false
z_index = 16
offset_left = 278.0
offset_top = -62.0
offset_right = 360.0
offset_bottom = 22.0
focus_mode = 0
theme_type_variation = &"FlatButton"
icon = ExtResource("27_7y4js")
icon_alignment = 1
expand_icon = true
script = ExtResource("29_3tbbb")

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
z_index = 15
offset_left = -368.0
offset_top = -663.0
offset_right = 380.0
offset_bottom = 649.0
mouse_filter = 2
color = Color(0, 0, 0, 0.584314)

[node name="PauseLabel" type="Label" parent="."]
visible = false
z_index = 16
texture_filter = 1
offset_left = -188.0
offset_top = -136.0
offset_right = 153.0
offset_bottom = -35.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("24_f6qqn")
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Audio" type="Node" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("27_jfa7l")
autoplay = true
bus = &"music"

[node name="ButtonPressed" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("31_16a6c")
bus = &"sfx"

[node name="TrashInTrashBin" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("32_oib6q")
bus = &"sfx"

[node name="TrashInWater" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("33_b44sk")
bus = &"sfx"

[connection signal="area_entered" from="WaterArea" to="." method="_on_water_area_entered"]
[connection signal="area_entered" from="TrashBinGroup/OrganicBin" to="." method="_on_organic_bin_area_entered"]
[connection signal="area_entered" from="TrashBinGroup/AnorganicBin" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="TrashBinGroup/ToxicBin" to="." method="_on_area_2d_area_entered"]
